Issue #1781308 by NancyDru: Change node form to vertical tab.
Issue #1926556 by NancyDru: Back to transition on node creation.
Issue #1550992 by chadhester: Add Previous Comment Author for Views.
Issue #1926800 by NancyDru: Fix operations links.
Issue #1865754 by NancyDru for leelooch: Add reminder to state add form.
Issue #1540412 by NancyDru: Allow timezones for transition scheduling.
Issue #1930638 by NancyDru, shenzhuxi: Undefined variable.
Issue #1540824 by NancyDru: Improve Admin UI.
Issue #1931032 by NancyDru: Add missing js file.
Issue #1931778 by NancyDru: Add breadcrumbs to access page.
Add admin ui css.
Issue #1350900 by loze: list states grouped by workflow.
Issue #1540824 by NancyDru: More Admin UI improvements.
Issue #1931948 by NancyDru: Use menu loaders to simplify menu.
Issue #1347116 by NancyDru: New Workflow_Cleanup module.
Issue #1509568 by fgm: Access control export.
Issue #1933466 by fgm: Remove Admin UI warning, repair redirection on workflow_access admin submit.
Issue #1768350 by NancyDru: Correct test and message for type page.
Issue #1380954 by Bastlyn, DRippstein: Add node_actions triggers.
Issue #1909922 by NancyDru: Add warning on Access UI page about content permissions.
Issue #1691870 by berenddeboer: Allow Rules to bypass permissions on transition.
Issue #1540914 by NancyDru: Pass parms in node form; allow comment alter at transition.
Issue #1744612 by NancyDru: Move VBO stuff into its own module.
Issue #1944574 by NancyDru: Undefined index.

Since 7.x-1.1-rc1
Issue #785194 by arcovia: Access to tab form.
Issue #785194 by NancyDru: Better access to tab form.
Issue #1691870 by NancyDru: Rules record workflow comment.
Issue #1691870 by NancyDru: Transition check wrong choices on Force.
Issue #1951164 by Kristen Pol: Fix left join order.
Issue #1951718 by NancyDru: Clean up history records.
Issue #1953642 by NancyDru: Add history row alter feature.
Issue #1953642 by NancyDru: Add state revert feature.